# intl-measurements

./: README.md
icu4c/: Makefile  locale.cpp  pluralrules.cpp
icu4x/data/icu4x/json/plurals/cardinal@1/: br.json  ceb.json  da.json  ff.json  gd.json  gv.json  lag.json  si.json
icu4x/data/icu4x/json/plurals/ordinal@1/: az.json  be.json  bn.json  ca.json  gd.json  gu.json  hu.json  ka.json  kw.json  mk.json  mr.json  or.json  sc.json  sv.json  tk.json
icu4x/locale/: Cargo.toml
icu4x/locale/src/: main.rs
icu4x/pluralrules/: Cargo.toml
icu4x/pluralrules/src/: main.rs
